--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,3 +14,16 @@ hr{
 thead > tr{
   background: #cfd8dc;
 }
+
+/* LOGIN */
+.loginOuterContainer{
+  position: relative;
+   min-height: 93%;
+   height:93vh;
+ }
+.loginInnerContainer{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+}
